# Test_suite_repo

./: .gitignore  README.md  conftest.py  index.html  pyproject.toml  test_suite_implementation.md
.github/workflows/: ci.yml  nightly.yml
data/: behaviors.json  packages.json  suites.csv  suites.json  timeline.json
data/test-cases/: 11ad01d641239411.json  12c5e77062474653.json  13f688d56a2b7eaf.json  163412d345ae3796.json  1ba1bb5f664721d8.json  1e7ba52af226052f.json  1ee124a2cbb66f16.json  21df31aa621d083c.json  292f3deab7c1d424.json  2a47ae01cd2f127.json  2a8c8ecbc58ac146.json  2d5ce6b2a4415012.json  2f61325c74fc6823.json  308b9a19d06d41df.json  327a191f05215b96.json  33562e26dfe660dc.json  341df4ef28f6f17b.json  42a306c00f06ed9a.json  42f48d444c08c9f1.json  43e514da0cab5320.json  44ed6a2dd5251b70.json  46afdad1b7fd8180.json  49b8cca5cd1930ed.json  4d9838dd9bb4539b.json  4eb5faa95939f47d.json  524b269e1d000d8.json  535409c3cf47e75c.json  5398213624f6588a.json  54c4b4c069578e74.json  58f6b118ed8c08f8.json  5bc0e927468a5ea3.json  5bc3dbede3ca136.json  5d010fb1a9be7d85.json  5f9f62291eb95f97.json  628dfa01925edbba.json  640e1297fbff26aa.json  64bc11a1d1f940be.json  652ff11ef785f08a.json  66dcc06878907cf8.json  693dffe916890d9a.json  (+82 more)
export/: influxDbData.txt  prometheusData.txt
history/: duration-trend.json  history.json
src/: api_client.py  auth.py  config.py  models.py
tests/: conftest.py
tests/api/: test_auth.py  test_booking_crud.py  test_edge_cases.py  (+2 more)
widgets/: duration-trend.json  duration.json  retry-trend.json  severity.json  suites.json  summary.json
(+6 files in other folders)
